--- a/templates/receita.html
+++ b/templates/receita.html
@@ -7,9 +7,9 @@
         <img src="img/core-img/hamburger.png" alt="">
     </div>
 
-    {% include 'partials/busca.html' %}
+    {% include 'partials/_busca.html' %}
 
-    {% include 'partials/menu.html' %}
+    {% include 'partials/_menu.html' %}
 
         <!-- Receipe Post Search -->
         <div class="receipe-post-search mb-80">
@@ -84,5 +84,5 @@
                     </div>
                 </div>
                 <!-- Ingredientes -->
-    {% include 'partials/footer.html' %}            
+    {% include 'partials/_footer.html' %}            
 {% endblock %} 
